examples/fail/fail_exception_serialize/project.bri
export const project = {
  dependencies: {
    std: "*",
  },
};

export default () => {
  return {
    briocheSerialize: () => {
      throw new Error("briocheSerialize exception");
    },
  };
};
